<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_operation_fragment"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editing_operation_guide_start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/base_horizontal_offset"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editing_operation_guide_end"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/base_horizontal_offset"
        />

    <TextView
        android:id="@+id/editing_operation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/editing_money_title_appbar"
        android:textColor="#27872A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/editing_operation_guide_end"
        app:layout_constraintStart_toStartOf="@id/editing_operation_guide_start"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/editing_operation_currency_ic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@id/editing_operation_guide_start"
        app:layout_constraintEnd_toStartOf="@id/editing_operation_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/editing_operation_edit_text"
        app:layout_constraintTop_toTopOf="@id/editing_operation_edit_text"
        tools:src="@drawable/ic_ruble"
        />

    <EditText
        android:id="@+id/editing_operation_edit_text"
        android:layout_width="0dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toBottomOf="@id/editing_operation_title"
        app:layout_constraintStart_toEndOf="@id/editing_operation_currency_ic"
        app:layout_constraintEnd_toEndOf="@id/editing_operation_guide_end"
        android:layout_marginTop="24dp"
        android:hint="@string/editing_money_hint_money"
        android:inputType="number"
        />

    <ImageView
        android:id="@+id/editing_operation_empty_category_ic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@id/editing_operation_guide_start"
        app:layout_constraintTop_toBottomOf="@id/editing_operation_edit_text"
        android:layout_marginTop="@dimen/base_horizontal_offset"
        android:src="@drawable/ic_no_category"
        />

    <Button
        android:id="@+id/editing_operation_select_category"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/editing_money_set_category"
        app:layout_constraintEnd_toEndOf="@id/editing_operation_guide_end"
        app:layout_constraintStart_toEndOf="@id/editing_operation_empty_category_ic"
        app:layout_constraintTop_toTopOf="@id/editing_operation_empty_category_ic"
        app:layout_constraintBottom_toBottomOf="@id/editing_operation_empty_category_ic"
        android:backgroundTint="#D6D6D6"
        android:textColor="#757575"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/editing_operation_save_button"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:text="@string/editing_money_add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editing_operation_select_category"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/green"
        />

</androidx.constraintlayout.widget.ConstraintLayout>